:bug: Fixed mobile view layout bug

--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -41,16 +41,17 @@
   }
 
   &__main {
-    @include flex(row, center, center);
+    @include flex(row, space-evenly, center);
     flex-wrap: wrap;
+    width: 100%;
   }
 
   &__item {
     @include flex(column, center, center);
-    width: 380px;
+    width: 100%;
     min-height: 450px;
-    margin: 1.5rem;
     padding: 1rem;
+    margin: 0.5rem;
     border-radius: 0.8rem;
     background-color: $primary-white;
     color: $primary-black;
@@ -59,15 +60,9 @@
     &:hover {
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     }
-    @media screen and (min-width: 2000px) {
-      width: 470px;
-      padding: 1.2rem;
-      border-radius: 0.75rem;
-    }
 
-    @media screen and (max-width: 300px) {
-      width: 100%;
-      margin: 1rem;
+    @media screen and (min-width: 900px) {
+      width: 46%;
     }
   }
 
